# QStarem-Universal

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: fetch-assets.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: bridge.js  shell.css  shell.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/variants/: 2.icns  3.icns  4.icns  5.icns  6.icns
src-tauri/src/: commands.rs  extensions.rs  icons.rs  lib.rs  settings.rs  updater.rs
ui/: index.html  settings.html  settings.js  styles.css  update-prompt.html
