[package]
name = "qstarem-universal"
version = "1.0.0"
description = "Desktop browser shell for Z-Stream with P-Stream userscript injection"
authors = ["perlytiara"]
license = "MIT"
repository = "https://github.com/perlytiara/QStarem-Universal"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
ureq = { version = "3", default-features = false, features = ["rustls"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
